mettre ajour de css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: #FFFEF8;
 }
 ol, ul {
 	list-style: none;
@@ -183,6 +184,10 @@ input[type="submit"]{
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
+}
+footer{
+	background: white;
+	padding: 10px;
 }
 
