css pour modifier

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -86,6 +86,7 @@ h2{
 	font-size: 30px;
 	color: #1D6154
 }
+
 nav ul {
 	display: flex;
 	align-items: center;
@@ -161,7 +162,16 @@ li:hover {
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
 }
+.MesProjets{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 20px;
+	align-items: baseline;
+}
+.modifier{
 
+}
 .gallery img {
 	width: 100%;
 
