--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -22,7 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	text-decoration: none;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -31,7 +31,6 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background: #FFFEF8;
 }
 ol, ul {
 	list-style: none;
@@ -64,7 +63,7 @@ section {
 	margin: 50px 0
 }
 
-h1{
+header h1{
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -86,7 +85,6 @@ h2{
 	font-size: 30px;
 	color: #1D6154
 }
-
 nav ul {
 	display: flex;
 	align-items: center;
@@ -97,34 +95,7 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-.boutons{
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	padding: 30px;
-	gap: 20px;
-}
-.btn{
-	font-family: 'Syne', sans-serif;
-	background: transparent;
-	font-size: 16px;
-	padding: 10px;
-	color: #1D6154;
-	border-radius: 20px;
-	border:1px solid #1D6154;
-}
-.btn:hover{
-	background-color: #1D6154;
-	color: white;
-}
-.btn-a:hover{
-	color: white;
-}
-.btn-a{ 
-	color:#1D6154 ;
-	text-decoration: none;
-}
+
 li:hover {
 	color: #B1663C;
 }
@@ -153,7 +124,6 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
 }
 .gallery {
 	width: 100%;
@@ -162,23 +132,14 @@ li:hover {
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
 }
-.MesProjets{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	gap: 20px;
-	align-items: baseline;
-}
-.modifier{
-display: none;
-}
+
 .gallery img {
 	width: 100%;
 
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
@@ -222,10 +183,445 @@ input[type="submit"]{
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em;
+	margin: 2em
 }
-footer{
-	background: white;
-	padding: 10px;
+/* CSS des boutons pour les filtres */
+.b_filter {
+	background-color: white;
+	border: 1px solid #1D6154;
+	text-align: center;
+	border-radius: 60px;
+	font-size: 16px;
+	color: #1D6154;
+	padding: 9px 20px 9px 20px;
+	font-weight: 700;
+	font-family: 'Syne';
 }
 
+.flexButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 51px;
+	margin-top: 51px;
+}
+
+.button_selected {
+	color: white;
+	background-color: #1D6154;
+}
+/*  fin CSS des boutons pour les filtres */
+
+/* Ajout règles pour le lien du login */
+header a {
+	text-decoration: none;
+	color: black;
+}
+header a:hover {
+	color: #B1663C;
+}
+/* Fin Ajout règles pour le lien du login */
+
+/* CSS page Log In */
+
+.a_login {
+	font-weight: 600;
+}
+
+.footer_login {
+	margin-top: 150px;
+}
+
+.form_login p {
+	margin: auto;
+	text-align: center;
+	text-decoration: underline;
+	margin-bottom: 10px;
+}
+
+#seconnecter {
+	transition: transform 0.2s ease;
+	cursor: pointer;
+}
+
+#seconnecter:hover {
+	transform: scale(1.1);
+}
+
+
+/* fin CSS page Log In */
+
+/* CSS du mode édition */
+
+.bandeau {
+	height: 59px;
+	background-color: black;
+	color: white;
+}
+
+.bulle {
+	background-color: white;
+	color: black;
+	border-radius: 60px;
+	height: 38px;
+	text-align: center;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 10px;
+	padding-right: 10px;
+	transition: transform 0.2s ease;
+	cursor: pointer;
+}
+
+.bulle:hover {
+	transform: scale(1.1);
+}
+
+.flexcenter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.column {
+	flex-direction: column;
+}
+
+
+.gap {
+	gap: 15px;
+}
+
+.flexcolumn {
+	display: flex;
+	flex-direction: column;
+	width: 60%;
+}
+
+.flex_image {
+	display: flex;
+	width: 80%;
+	margin: auto;
+	margin-top: 10px;
+	gap: 8px;
+	
+}
+
+.gap_titrePortfolio {
+	gap: 30px;
+	margin-bottom: 30px;
+}
+
+#portfolio a {
+	text-decoration: none;
+	color: black;
+}
+
+/* Fin CSS mode Edition */
+
+/* CSS modal */
+
+.modal {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.3);
+	animation: fadeIn 0.3s both;
+	z-index: 20;
+	width: 100vw;
+	height: 100vh;
+
+}
+
+.modal :focus {
+	box-shadow: 0 0 10px blue;
+}
+.modal-wrapper {
+	background-color: white;
+	width: 630px;
+	height: 731px;
+	padding: 20px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	overflow: auto;
+	animation: slideFromTop .3s both .1s;
+}
+
+.modal[aria-hidden= "true"] {
+	animation-name: fadeOut;
+}
+
+.modal[aria-hidden= "true"] .modal-wrapper {
+	animation-name: slideFromBottom;
+}
+
+@keyframes fadeIn {
+	from { opacity: 0;}
+	to {opacity: 1;}
+}
+
+@keyframes slideFromTop {
+	from { transform: translateY(-50px);}
+	to {transform: translateY(0px);}
+}
+
+@keyframes fadeOut {
+	from { opacity: 1;}
+	to {opacity: 0;}
+}
+
+@keyframes slideFromBottom {
+	from { transform: translateY(0px);}
+	to {transform: translateY(50px);}
+}
+
+.js-modal-close {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	border: none;
+	background : none;
+}
+
+.fa-xmark {
+	font-size: 1.5rem;
+}
+
+.modal-wrapper h1 {
+	margin-top: 50px;
+	font-size: 26px;
+	display: flex;
+	justify-content: center;
+}
+
+.separation {
+	border-top: 1px solid rgba(179, 179, 179, 1);
+	width: 80%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.picture-par {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.add-picture {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	width: 237px;
+	border-radius: 60px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding: 10px 15px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+}
+
+.add-picture:hover {
+	transform: scale(1.1);
+}
+
+.sup-gal {
+	margin-right: auto;
+	margin-left: auto;
+	color: #D65353;
+	font-family: 'Syne';
+	padding: 5px;
+	font-weight: 400;
+	font-size: 16px;
+}
+
+.modal img {
+	width: 90px;
+	height: 105px;
+}
+
+.modal-gallery {
+	display: grid;
+	gap: 8px;
+	padding: 46px 105px;
+	grid-template-columns: repeat(5, 1fr);
+	justify-content: center;
+
+}
+
+.modal-gallery-icon {
+	position: absolute;
+	display: flex;
+	top: 5px;
+	right: 5px;
+	gap: 3px;
+}
+
+.bg-icon {
+	background-color: black;
+	color: white;
+	padding: 3px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+}
+
+.bg-icon:hover {
+	background-color: red;
+	transform: scale(1.1);
+}
+
+
+/* fin CSS modal */
+
+/* CSS modal2 */
+
+
+
+.modal2-icon {
+	display: flex;
+	justify-content: space-between;
+}
+
+.fa-arrow-left {
+	font-size: 1.5rem;
+}
+
+.container-add-pictures {
+	width: 420px;
+	height: 170px;
+	background-color: #E8F1F6;
+	margin: 3em auto;
+
+}
+
+.fa-image {
+	font-size: 4rem;
+	color: #B9C5CC;
+	margin-bottom: 15px;
+}
+
+.js-backButton {
+	cursor: pointer;
+	border: none;
+	background-color: white;
+	transition: transform 0.2s ease;
+}
+
+.js-backButton:hover {
+	transform: scale(1.1);
+}
+
+.container-add-pictures-button {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: #306685;
+	background-color: #CBD6DC;
+	margin : 0 auto 10px ;
+	width: 173px;
+	border-radius: 60px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding: 10px 15px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+}
+
+.container-add-pictures-button:hover {
+	transform: scale(1.1);
+}
+
+.container-add-pictures-p {
+	text-decoration: none;
+}
+
+#modal2 form {
+	text-align: left;
+	margin-top:30px;
+	display: flex;
+	flex-direction: column;
+	width: 420px;
+	margin: auto;
+}
+
+#modal2 input, select {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	margin-top: 10px;
+	margin-bottom: 21px;
+	padding: 0 10px;
+}
+
+
+.separation2 {
+	border-top: 1px solid rgba(179, 179, 179, 1);
+	width: 420px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 20px;
+}
+
+.add-picture-valid {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #A7A7A7;
+	margin : 2em auto ;
+	width: 237px;
+	border-radius: 60px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding: 10px 15px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+.add-picture-valid p {
+	text-decoration: none;
+	text-align: center;
+}
+
+.add-picture-valid:hover {
+	transform: scale(1.1);
+}
+
+#file-upload {
+	display: none;
+}
+
+#preview {
+	display: none;
+	width: 130px;
+	height: 100%;
+}
+
+.gestion-display {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.add-bg-green {
+	background-color: #1D6154;
+}
+
+
+
+/* fin CSS modal2 */
